Add intro and buttom of intro

--- a/style.css
+++ b/style.css
@@ -154,6 +154,11 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+.slider_inner {
+    display: flex;
+    justify-content: space-between;
+}
+
 .slider_item {
     width: 23%;
     padding: 20px 0;
