--- a/style.css
+++ b/style.css
@@ -19,6 +19,16 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+hr {
+    border: 0;
+    background-color: #e5e5e5;
+    display: block;
+    width: 100%;
+    margin: 40px 0;
+    height: 1px;
+    border: 0;
+}
+
 .container {
     width: 100%;
     max-width: 1200px;
@@ -180,3 +190,158 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 
 }
+
+.section {
+    padding: 80px 0;
+}
+
+.section_header {
+    width: 100%;
+    max-width: 950px;
+    margin: 0 auto 50px;
+    text-align: center;
+}
+
+.section_suptitle {
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+    color: #333;
+}
+
+.section_title {
+    font-size: 30px;
+    font-weight: 700;
+    color: #333;
+    text-transform: uppercase;
+}
+
+.palocka_2 {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: #e5597c;
+}
+
+.section_text {
+    color: #999;
+    font-size: 15px;
+}
+
+.about {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+.about_item {
+    width: 390px;
+    background-color: #7cbaf4;
+    position: relative;
+}
+
+.about_item:hover .about_image {
+    transform: translate3d(-10px, -10px, 0);
+}
+
+.about_item:hover .about_image img{
+    opacity: 0.3;
+}
+
+.about_item:hover .about_text {
+    opacity: 1;
+}
+
+.about_image {
+    background: linear-gradient(to bottom, #f490bd, #ecf169);
+    transition: transform .3s linear;
+}
+
+.about_image img {
+    display: block;
+    transition: opacity .1s linear;
+}
+
+.about_text {
+    width: 100%;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 2;
+    transform: translate3d(0, -50, 0);
+    opacity: 0;
+    transition: opacity .2s linear;
+}
+
+.statistics {
+    background-color: #7cbaf4;
+}
+
+.stat {
+    display: flex;
+}
+
+.stat_item {
+    flex: 1 1 0;
+    border-left: 1px solid #95e1d3;
+    text-align: center;
+    color: #fff;
+    padding: 70px 25px;
+}
+
+.stat_item:last-child {
+    border-right: 1px solid #95e1d3;
+}
+
+.stat_count {
+    margin-bottom: 10px;
+    font-size: 72px;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.stat_text {
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.services {
+    display: flex;
+}
+
+.services_item {
+    flex: 1 1 0;
+    padding-left: 85px;
+    position: relative;
+    padding-right: 35px;
+}
+
+.services_icon {
+    position: absolute;
+    top: 0;
+    left: 28px;
+    z-index: 1;
+}
+
+.services_title {
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+
+.services_text {
+    font-size: 15px;
+    counter-reset: #333;
+}
+
+
+
