--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ hr {
 }
 
 .section--gray {
-    background-color: #dddcdb;
+    background-color: #f0eae9;
 }
 
 .section_header {
@@ -242,41 +242,41 @@ hr {
     font-size: 15px;
 }
 
-.about {
+.card {
     display: flex;
     justify-content: space-between;
     margin-top: 80px;
 }
 
-.about_item {
-    width: 390px;
+.card_item {
+    /* width: 390px; */
     background-color: #7cbaf4;
     position: relative;
 }
 
-.about_item:hover .about_image {
+.card_item:hover .card_image {
     transform: translate3d(-10px, -10px, 0);
 }
 
-.about_item:hover .about_image img{
+.card_item:hover .card_image img{
     opacity: 0.3;
 }
 
-.about_item:hover .about_text {
+.card_item:hover .card_text {
     opacity: 1;
 }
 
-.about_image {
+.card_image {
     background: linear-gradient(to bottom, #f490bd, #ecf169);
     transition: transform .3s linear;
 }
 
-.about_image img {
+.card_image img {
     display: block;
     transition: opacity .1s linear;
 }
 
-.about_text {
+.card_text {
     width: 100%;
     color: #fff;
     text-transform: uppercase;
@@ -466,7 +466,6 @@ hr {
     font-style: italic;
     font-weight: 300;
     color: #999;
-    margin-bottom: 15px;
 }
 
 .reviews_author {
@@ -483,35 +482,37 @@ hr {
     height: 3px;
     background-color: #e5597c;
     margin-right: 10px;
-}
+} 
 
-.reviews_btn {
-    font-size: 0;
-    color: transparent;
-    position: absolute;
-    top: 50%;
-    z-index: 1;
-    transform: translateY(-50%);
-}
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+  }
+  
+  a:hover {
+    /* background-color: #ddd; */
+    color: black;
+  }
+  
+  .previous {
+    /* background-color: #f1f1f1; */
+    color: gray;
+    float: left;
+    font-size: 60px;
+  }
+  
+  .next {
+    font-size: 60px;
+    color: gray;
+    float: right;
+  }
+  
+  .round {
+    border-radius: 50%;
+  }
 
-.reviews_btn:after {
-    content: "";
-    display: block;
-    width: 16px;
-    height: 16px;
-    border-top: 2px solid black;
-    border-left: 2px solid black;
-}
 
-.reviews_btn--prev {
-    left: 0;
-    transform: rotate(-45deg);
-}
-
-.reviews_btn--next {
-    right: 0;
-    transform: rotate(135);
-}
 
 
 
