--- a/style.css
+++ b/style.css
@@ -206,6 +206,17 @@ hr {
     background-color: #f0eae9;
 }
 
+.section--clients {
+    background-color: #f8f8f8;
+}
+
+.section--clients {
+    background: url("img/landscape.svg") center no-repeat;
+    background-size: cover;
+    padding-bottom: 0;
+    margin-bottom: 40px;
+}
+
 .section_header {
     width: 100%;
     max-width: 950px;
@@ -248,21 +259,24 @@ hr {
     margin-top: 80px;
 }
 
-.card_item {
-    /* width: 390px; */
+/* .card_item {
+    width: 380px;
+} */
+
+.card_inner {
     background-color: #7cbaf4;
     position: relative;
 }
 
-.card_item:hover .card_image {
+.card_inner:hover .card_image {
     transform: translate3d(-10px, -10px, 0);
 }
 
-.card_item:hover .card_image img{
+.card_inner:hover .card_image img{
     opacity: 0.3;
 }
 
-.card_item:hover .card_text {
+.card_inner:hover .card_text {
     opacity: 1;
 }
 
@@ -290,6 +304,24 @@ hr {
     transform: translate3d(0, -50, 0);
     opacity: 0;
     transition: opacity .2s linear;
+}
+
+.card_info {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.card_name {
+    text-transform: uppercase;
+    color: #333;
+    font-size: 14px;
+}
+
+.card_prof {
+    color: #999;
+    font-size: 15px;
+    font-style: italic;
+    font-weight: 300;
 }
 
 .statistics {
@@ -488,31 +520,229 @@ a {
     text-decoration: none;
     display: inline-block;
     padding: 8px 16px;
-  }
+}
   
-  a:hover {
+a:hover {
     /* background-color: #ddd; */
     color: black;
-  }
+}
   
-  .previous {
+.previous {
     /* background-color: #f1f1f1; */
     color: gray;
     float: left;
     font-size: 60px;
-  }
+}
   
-  .next {
+.next {
     font-size: 60px;
     color: gray;
     float: right;
-  }
+}
   
-  .round {
+.round {
     border-radius: 50%;
-  }
+}
 
+.social {
+    display: flex;
+    justify-content: center;
+}
 
+.social_item {
+    width: 55px;
+    height: 55px;
+    padding: 12px 10px;
+    line-height: 1;
+    background-color: #ecf169;
+    border-right: 1px solid #f38181;
+    text-decoration: none;
+    color: #f38181;
+    font-size: 30px;
+}
 
+.social_item:last-child {
+    border-right: 0;
+}
+
+.social_item:hover {
+    background-color: #f38181;
+    color: white;
+}
+
+.logos {
+    display: flex;
+}
+
+.works {
+    display: flex;
+
+}
+
+.works_col {
+    flex: 1 1 0;
+}
+
+.works_item {
+    position: relative;
+    background: linear-gradient(to bottom, #f490bd, #ecf169);
+}
+
+.works_item:hover .works_image {
+    opacity: .1;
+}
+
+.works_item:hover 
+.works_info {
+    opacity: 1;
+}
+
+.works_image {
+    transition: opacity .2s linear;
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.works_info {
+    width: 100%;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 2;
+    transform: translate3d(0, -50, 0);
+    opacity: 0;
+    transition: opacity .2s linear;
+}
+
+.works_title {
+    margin-bottom: 5px;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.works-text {
+    font-size: 15px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+/* Clients */
+
+.clients {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 70px;
+}
+
+.clients_item {
+    width: 50%;
+    padding: 0 45px 0 200px;
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.clients_photo {
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    margin-left: 50px;
+    
+}
+
+.clients_name {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+}
+
+.clients_prof {
+    font-size: 15px;
+    color: #333;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.clients_text {
+    font-size: 15px;
+    color: #999;
+}
+
+.clients_text:before {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 15px 0;
+    background-color: #f38181;
+}
+
+/* Blog */
+
+.blog {
+    display: flex;
+}
+
+.blog_item {
+    width: 30%;
+}
+
+.blog_header {
+    position: relative;
+    margin-bottom: 14px;
+}
+
+.blog_photo {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.blog_date {
+    padding: 0 10px;
+    background-color: #95e1d3;
+    color: #fff;
+    font-weight: 300;
+    text-align: center;
+    font-size: 15px;
+    font-style: italic;
+    position: absolute;
+    bottom: 15px;
+    left: -10px;
+    z-index: 1;
+}
+
+.blog_date-day {
+    font-size: 30px;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.blog_title {
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+}
+
+.blog_text {
+    font-size: 15px;
+    color: #999;
+}
+
+.blog_footer {
+    border-top: 1px solid #e5e5e5;
+}
+/* 7 видео 14мин */
 
 
