--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ hr {
 .container {
     width: 100%;
     max-width: 1200px;
+    padding: 0 15px;
     margin: 0 auto;    
 }
 
@@ -287,12 +288,14 @@ hr {
 .card {
     display: flex;
     justify-content: space-between;
-    margin-top: 80px;
+    flex-wrap: wrap;
+    margin-top: 80px -15px 0;
 }
 
-/* .card_item {
-    width: 380px;
-} */
+.card_item {
+    width: 33.33333%;
+    padding: 0 15px;
+}  
 
 .card_inner {
     background-color: #7cbaf4;
@@ -318,6 +321,8 @@ hr {
 
 .card_image img {
     display: block;
+    max-width: 100%;
+    height: auto;
     transition: opacity .1s linear;
 }
 
@@ -365,6 +370,7 @@ hr {
 
 .stat {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .stat_item {
@@ -397,13 +403,18 @@ hr {
 
 .services {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .services_item {
-    flex: 1 1 0;
-    padding-left: 85px;
+    width: 33.33333%;
+    padding: 0 35px 40px 85px;
     position: relative;
-    padding-right: 35px;
+    margin-bottom: 40px;
+}
+
+.services_item--border {
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .services_icon {
@@ -438,6 +449,8 @@ hr {
 
 .devices_item {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .devices_item--phone {
@@ -453,10 +466,19 @@ hr {
 
 .wedo {
     display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
 }
 
 .wedo_item {
     width: 50%;
+    padding: 0 15px;
+}
+
+.wedo_img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .accordion_item {
@@ -1067,6 +1089,222 @@ a:hover {
 }
 
 
+@media (max-width: 1230px) {
+    /* Intro */
+    .intro_suptitle{
+        font-size: 52px;
+    }
+
+    .intro_title {
+        font-size: 120px;
+    }
+
+    /* Reviews */
+    .reviews_text {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 990px) {
+    /* Intro */
+    .intro_suptitle{
+        font-size: 32px;
+    }
+
+    .intro_title {
+        font-size: 80px;
+    }
+
+    /*Stat */
+    .stat {
+        justify-content: center;
+    }
+
+    .stat_item {
+        flex: none;
+        width: 33.3333%;
+        border: 0;
+        padding-top: 30px;
+    }
+
+    .stat_item:last-child {
+        border-right: 0;
+    }
+    
+
+    /* Services */
+    .services_item {
+        width: 50%;
+        padding-bottom: 0;
+    }
+
+    .services_item--border {
+        border-bottom: 0;
+    }
+
+    /* Reviews */
+    .reviews {
+        padding-right: 60px;
+    } 
+
+    .reviews_photo {
+        width: 120px;
+        height: 120px;
+    }
+
+    .reviews_item {
+        padding-left: 175px;
+    }
+}
+
+@media (max-width: 770px) {
+    /* Nav */
+    .nav {
+        display: none;
+    }
+
+    /* Section */
+    .section {
+        padding: 40px 0;
+    }
+
+    .section--devices {
+        padding-bottom: 0;
+    }
+
+    /* Card */
+    .card {
+        margin-top: 50px;
+        justify-content: center;
+    }
+
+    .card_item {
+        width: 100%;
+        max-width: 410px;
+        margin-bottom: 30px;
+    }
+
+    .card_item:last-child {
+        margin-bottom: 0;
+    }
+
+    /* Slider */
+    .slider_text {
+        display: none;
+    }
+
+    .slider_item.active:before {
+        width: 50%;
+    }
+
+    /* Services */
+    .services {
+        justify-content: center;
+    }
+
+    .services_item {
+        width: 100%;
+        max-width: 400px;
+    }
+
+    .services_item--border {
+        border-bottom: 0;
+    }
+
+    /* Wedo */
+    .wedo_img {
+        display: none;
+    }
+
+    .wedo_item {
+        width: 100%;
+    }
+
+    /* Reviews */
+    .reviews_photo {
+        display: block;
+        position: static;
+        margin-bottom: 20px;
+    }
+
+    .reviews_item {
+        padding-left: 0;
+    }
+
+    .reviews_text {
+        font-size: 16px;
+    }
+
+    .reviews_author {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 575px) {
+    /* Intro */
+    .intro_suptitle {
+        font-size: 22px;
+    }
+
+    .intro_title {
+        font-size: 40px;
+    }
+
+    /* Section */
+    .section_suptitle {
+        font-size: 20px;
+    }
+
+    .section_header {
+        margin-bottom: 50px;
+    }
+
+    .section_title {
+        font-size: 24px;
+    }
+
+    .palocka_2 {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    /* Stat */
+    .stat_item {
+        width: 100%;
+        border-bottom: 1px solid #e5e5e5;
+        padding-bottom: 30px;
+    }
+
+    .stat_item:last-child {
+        border-bottom: 0;
+    }
+
+    .stat_count {
+        font-size: 52px;
+    }
+
+    /* Devices */
+    .devices {
+        max-width: 320px;
+    }
+
+    .devices_item--phone {
+        width: 180px;
+        bottom: -60px;
+        right: -50px;
+    }
+
+    /* Reviews */
+    .reviews {
+        padding-left: 40px;
+        padding-right: 20px;
+    } 
+
+    .reviews_photo {
+        margin: 0 auto 20px;
+    }
+
+}
 
 
 
